# mkdocs-tutorial

./: mkdocs.yml  pyproject.toml  release.py  requirements.txt  versions.json  versions.py
1.0/: 404.html  index.html
1.0/explanation/: index.html
1.0/how-to-guides/: index.html
1.0/reference/: index.html
1.0/tutorials/: index.html
1.1/: index.html
1.1.1/: index.html
1.1.2/: index.html
1.1.2/how-to-guides/: index.html
1.1.3/: index.html  objects.inv
2.0/: 404.html  index.html
2.0.0/: index.html
2.0.1/: index.html
2.0.1/tutorials/: index.html
2.0/explanation/: index.html
2.0/how-to-guides/: index.html
2.0/tutorials/: index.html
3.0/: index.html
5.0/: 404.html  index.html
5.0/how-to-guides/: index.html
5.0/tutorials/: index.html
5.1/: index.html
calculator/: __init__.py  calculations.py
docs/: how-to-guides.md  index.md
how-to-guides/: index.html
latest/explanation/: index.html
latest/how-to-guides/: index.html
latest/reference/: index.html
latest/tutorials/: index.html
reference/: index.html
site/: 404.html  index.html
site/explanation/: index.html
site/how-to-guides/: index.html
site/reference/: index.html
site/tutorials/: index.html
tests/: test_sanity.py
